[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["Template <template>"]
license = "MPL-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
opencv-python = "^4.8.0.76"
pillow = "^10.0.0"
async-tkinter-loop = "^0.9.0"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
